[workspace]
members = [
    "logion-shared",
    "pallet-block-reward",
    "pallet-lo-authority-list",
    "pallet-logion-loc",
    "pallet-logion-vault",
    "pallet-logion-vote",
    "pallet-verified-recovery"
]
exclude = [
    "offchain-client"
]
resolver = "2"

[profile.release]
panic = "unwind"
