[package]
authors = ['Logion Team <https://github.com/logion-network>']
description = 'Implements logion shared components.'
edition = '2021'
homepage = 'https://logion.network'
license = 'Apache-2.0'
name = 'logion-shared'
readme = 'README.md'
repository = 'https://github.com/logion-network/logion-shared'
version = '0.1.1'
keywords = ['logion']

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive", "max-encoded-len"] }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.1.0" }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.1.0" }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.1.0" }
sp-weights = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.1.0" }

[features]
default = ['std']
std = [
    'frame-support/std',
    'frame-system/std',
    'sp-std/std',
]
