[package]
authors = ['Logion Team <https://github.com/logion-network>']
description = 'Pallet implementing block reward.'
edition = '2021'
homepage = 'https://logion.network'
license = 'Apache-2.0'
name = 'pallet-block-reward'
readme = 'README.md'
repository = 'https://github.com/logion-network/logion-pallets'
version = '0.1.0'
keywords = ['logion']

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive", "max-encoded-len"] }
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, optional = true, tag = "polkadot-v1.8.0" }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.8.0" }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.8.0" }
log = { version = "0.4.17", default-features = false }
logion-shared = { path = "../logion-shared", default-features = false }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.8.0" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.8.0" }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.8.0" }

[dev-dependencies]
bs58 = "0.5.0"
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.8.0" }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.8.0" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.8.0" }

[features]
default = ['std']
std = [
	'codec/std',
	'frame-benchmarking?/std',
	'frame-support/std',
	'frame-system/std',
	'logion-shared/std',
	'pallet-balances/std',
	'scale-info/std',
	'sp-runtime/std',
	'sp-std/std',
]
runtime-benchmarks = [
	'frame-benchmarking/runtime-benchmarks',
	'frame-support/runtime-benchmarks',
	'frame-system/runtime-benchmarks',
	'sp-runtime/runtime-benchmarks',
]
try-runtime = ['frame-support/try-runtime']
