[package]
authors = ['Logion Team <https://github.com/logion-network>']
description = 'Pallet implements Logion Vault.'
edition = '2018'
homepage = 'https://logion.network'
license = 'Apache-2.0'
name = 'pallet-logion-vault'
repository = 'https://github.com/logion-network/pallet-logion-vault'
version = '0.1.1'
keywords = ['logion']

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive", "max-encoded-len"] }
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, optional = true, tag = "polkadot-v1.9.0" }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.9.0" }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.9.0" }
logion-shared = { path = "../logion-shared", default-features = false }
pallet-multisig = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.9.0" }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.9.0" }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.9.0" }
sp-weights = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.9.0" }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.9.0" }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.9.0" }

[features]
default = ['std']
std = [
	'codec/std',
	'frame-benchmarking?/std',
	'frame-support/std',
	'frame-system/std',
	'logion-shared/std',
	'pallet-multisig/std',
	'scale-info/std',
	'sp-runtime/std',
	'sp-std/std',
]
runtime-benchmarks = [
	'frame-benchmarking/runtime-benchmarks',
	'frame-support/runtime-benchmarks',
	'frame-system/runtime-benchmarks',
]
try-runtime = ['frame-support/try-runtime']
